Remove the feature detail sections at the bottom of the Plus intro hub tab

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1655,7 +1655,7 @@
 	  "message": "Download Ghostery Dawn and Glow, our powerful private browser with built-in search engine"
 	},
 	"hub_supporter_manifesto": {
-		"message": "We strive to deliver the best privacy protection services to our users free of cost. While we do not charge for our browser extension, you may choose to support us through a monthly subscription of &#36;4.99. Join us in our mission by upgrading to Ghostery Plus - and unlock cool perks along the way!"
+		"message": "Upgrade to Ghostery Plus to unlock our full product suite! For just &#36;4.99 per month, get access to a powerful private browser with built-in private search, advanced tracker analytics, and other special perks."
 	},
 	"hub_supporter_feature_theme_description": {
 		"message": "Customize the Ghostery colors for a new visual experience! Introduced through popular request. Check out our special Dark Blue theme, and more to come."
