Update in-app Plus upgrade panel pitch copy

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1976,7 +1976,7 @@
 		"message": "Themes"
 	},
 	"subscribe_pitch": {
-		"message": "While Ghostery is free, you can choose to support us through a monthly subscription of &#36;4.99 in exchange for special perks, like color themes, personal tracking statistics, and more. Join our mission and subscribe!"
+	  "message": "Upgrade to Ghostery Plus to unlock our full product suite! For just &#36;4.99 per month, get access to a powerful private browser with built-in private search, advanced tracker analytics, and other special perks."
 	},
 	"subscribe_pitch_spring": {
 		"message": "Like what we do? Support us and unlock new spring themes, personal tracking insights, and other special perks by upgrading to Ghostery Plus!"
