--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2110,13 +2110,13 @@
 		"message": "No, Keep History"
 	},
 	"panel_stats_pitch_modal_text": {
-		"message": "Unlock your historical stats (and other cool perks) by upgrading to Ghostery Plus."
+		"message": "Unlock advanced tracker analytics and a powerful private browser with built-in private search by upgrading to Ghostery Plus."
 	},
 	"panel_stats_pitch_modal_already": {
-		"message": "Already a Ghostery Supporter?"
+		"message": "Already subscribed?"
 	},
 	"panel_stats_pitch_modal_sign_in": {
-		"message": "Sign in here"
+		"message": "Sign In"
 	},
 	"panel_stats_pitch_modal_tooltip": {
 		"message": "Erase all statistics history up until this point in time."
