--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2270,9 +2270,6 @@
 	"learn_more": {
 		"message": "Learn More"
 	},
-	"custom_themes": {
-		"message": "Custom Themes"
-	},
 	"historical_stats": {
 		"message": "Historical Stats"
 	},
@@ -2381,5 +2378,20 @@
 	},
   	"ghostery_dawn_onboarding_back_to_search_selection": {
 	  "message": "Back to search selection"
+	},
+  	"plus_subscriber_perk_insights" : {
+	  "message": "Ghostery Insights (Advanced Tracker Analytics)"
+	},
+	"plus_subscriber_perk_dawn" : {
+	  "message": "Ghostery Dawn (Private Browser)"
+	},
+	"plus_subscriber_perk_glow" : {
+	  "message": "Ghostery Glow (Private, Ad-Free Search)"
+	},
+	"plus_subscriber_perk_custom_color_themes" : {
+	  "message": "Custom Color Themes"
+	},
+	"plus_subscriber_perk_priority_support" : {
+	  "message": "Priority Support"
 	}
 }
